plugins {
    id 'java'
    id 'jvm-test-suite'
    id 'maven-publish'
    id 'jacoco'
    id 'io.freefair.lombok'
}

group = 'com.labelzoom.api'
version = '1.8.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform("com.fasterxml.jackson:jackson-bom:2.22.0")
    testImplementation 'com.fasterxml.jackson.core:jackson-databind'
    testImplementation 'org.reflections:reflections:0.10.2'
    testImplementation 'uk.co.jemos.podam:podam:8.0.2.RELEASE'
}

testing {
    suites {
        test {
            useJUnitJupiter()
        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifactId = 'labelzoom-api'
        }
    }
    repositories {
        maven {
            name = 'GitHubPackages'
            url = 'https://maven.pkg.github.com/labelzoom/labelzoom-api'
            credentials {
                username = System.getenv('GITHUB_ACTOR')
                password = System.getenv('GITHUB_TOKEN')
            }
        }
    }
}

// Code coverage
test {
    finalizedBy jacocoTestReport // generate the report after tests run
}
jacocoTestReport {
    reports {
        xml.required = true
        html.required = false
    }
}
